@@ -74,8 +74,7 @@
             <artifactId>tomcat-coyote</artifactId>
             <version>${tomcat.version}</version>
             <scope>provided</scope>
-        </dependency>
-
+        </dependency>        
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
